<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpaceLand</string>
    <string name="action_settings">Settings</string>
    <string name="bt_creategame">New Game</string>
    <string name="bt_loadgame">Load Game</string>
    <string name="bt_settings">Settings</string>
	<string name="bt_back">Back</string>
	<string name="MenuSave">Save</string>
	<string name="MenuQuit">Quit</string>
	<string name="Title_createGame">Create Game</string>
	<string name="Title_loadGame">Load Game</string>
	<string name="Title_settings">Settings</string>
	<string name="Error_createGame">An error lock the creation of save. Sorry</string>
	<string name="Good_createGame">Your save %s  is created.</string>
	<string name="bt_loadDelete">Delete</string>
	<string name="Error_loadDelete">An error lock the deletetion of save. Sorry</string>
	<string name="Good_loadDelete">Your save %s  is deleted.</string>
	<string name="label_progress_universe_create">Universe Progression</string>
	<string name="label_progress_galaxy_create">Galaxy Progression</string>
	<string name="label_progress_solar_create">Solar Progression</string>
	<string name="label_progress_planet_create">Planet Progression</string>
	<string name="universe_background">Universe:Background</string>
	<string name="galaxy_background">Galaxy:Background</string>
	<string name="solar_system_background">Solar System:Background</string>
	<string name="settings_universeSize">Size of universe</string>
	<string name="settings_galaxySize">Size of galaxy</string>
	<string name="settings_solarSize">Size of solar System</string>
	<string name="settings_planetSize">Size of planet</string>
	<string name="bp_settingsSave">Save settings</string>
	<string name="settings_SaveText">Set Universe size: _1d, Galaxy size: _2d, Solar System size: _3d, Planet size: _4d</string>
</resources>
