<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/settings_universe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/createGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/settings_universe"
        android:layout_below="@+id/settings_universe"
        android:layout_marginTop="24dp"
        android:text="@string/bt_creategame" />

    <TextView
        android:id="@+id/News"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LoadGame"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/createGame"
        android:layout_toRightOf="@+id/createGame"
        android:text="NEWS" />

    <Button
        android:id="@+id/LoadGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Settings"
        android:layout_alignRight="@+id/Settings"
        android:layout_below="@+id/createGame"
        android:layout_marginTop="24dp"
        android:text="@string/bt_loadgame" />

    <Button
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/createGame"
        android:layout_below="@+id/LoadGame"
        android:layout_marginTop="24dp"
        android:text="@string/bt_settings" />

</RelativeLayout>