<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameLayout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <View
        android:id="@+id/gameView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/blue"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageUniverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/universe_background"
        android:scaleType="fitXY"
        android:src="@drawable/universe_0"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageGalaxy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/galaxy_background"
        android:scaleType="fitXY"
        android:src="@drawable/galaxy_0"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageSolar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        android:contentDescription="@string/solar_system_background"
        android:scaleType="center"
        android:src="@drawable/solar_0"
        android:visibility="gone" />
</RelativeLayout>
